# airplane-controller

./: .gitignore  CMakeLists.txt  README.md  entrada.txt  main.c
include/: eventos.h  interface.h  listas.h  log.h  parser.h  validacoes.h
src/: eventos.c  interface.c  listas.c  log.c  main.c  parser.c  validacoes.c
